# SemanticVibe

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  PROGRESS_PHASE_1.md  PROGRESS_PHASE_2.md  README.md  SETUP.md  SemanticVibe_Spec.docx  app.py  pyproject.toml  requirements-dev.txt  requirements-sdxl.txt  requirements.txt  stickers_config.json
assets/: gesture_vocabulary.json  styles.json  tag_vocabulary.json
data/: README.md
data/assets_lib/: metadata.json
examples/: baseline_dream_v4.json  demo_chinese.json  sing_handdrawn.json  suki_decision.json
examples/legacy/: baseline_dream.json  demo_chinese.json  hand_written_decision.json  sing_full.json  suki_decision.json
playground/hf_workspace/: package-lock.json  package.json  render_frames.js
playground/test-hyperframes/: VALIDATION_REPORT.md  index.html  meta.json  package.json
samples/: lyrics_demo.json  lyrics_mosimosi.json  lyrics_test.json
scripts/: animation.py  bootstrap.ps1  bootstrap.sh  build_index.py  classify_new_assets.py  clean_background.py  compositor.py  fix_pth.ps1  generate_placeholder_assets.py  generate_stickers.py  patch_lora_alpha.py  preview_lyrics.py  probe_whisper.py  vlm_smoke.py
src/semanticvibe/: __init__.py  asset_retrieval.py  beat_sync.py  build_elements.py  cli.py  config.py  lyrics.py  motion_detector.py  pipeline.py  pose_detector.py  render_demo.py  semantic_align.py  style.py  (+1 more)
tests/: conftest.py  test_anim_assignment.py  test_animations.py  test_build_elements_v6.py  test_config.py  test_easings.py  test_heuristic.py  test_idle_animations.py  test_layout.py  test_layout_zones.py  test_lyrics.py  test_render.py  test_render_cli.py  test_schemas.py  test_semantic_align.py
(+40 files in other folders)
