[project]
name = "semanticvibe"
version = "0.1.0"
description = "Semantic-vibe overlay generator: 5-stage pipeline producing Chinese text + decoration overlays on music videos."
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "AI人文" }]

dependencies = [
    # Schemas + LLM
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.40",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "tenacity>=8.2",

    # Preprocess (Stage 1)
    "faster-whisper>=1.0",
    "librosa>=0.10",
    "mediapipe>=0.10",
    "transformers>=4.40",
    "torch>=2.2",
    "opencv-python>=4.9",

    # Asset retrieval (Stage 3)
    "open-clip-torch>=2.24",
    "pillow>=10.0",
    "numpy>=1.26",

    # Render (Stage 5)
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4",

    # UI (Week 5)
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "nbstripout"]
sdxl = ["diffusers>=0.27", "accelerate", "rembg"]

[project.scripts]
semanticvibe = "semanticvibe.cli:main"
semanticvibe-render-demo = "semanticvibe.render_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semanticvibe"]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
